[gd_scene load_steps=13 format=3 uid="uid://dshc4h5lipr26"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_dq6dd"]
[ext_resource type="PackedScene" uid="uid://fmyumo0aq4ua" path="res://scenes/ship.tscn" id="1_ra0tt"]
[ext_resource type="Texture2D" uid="uid://ccurknedxv85g" path="res://sprites/ships/white/health_high.png" id="2_1fgds"]
[ext_resource type="Script" path="res://scripts/camera.gd" id="4_6ifil"]
[ext_resource type="PackedScene" uid="uid://bs0etbf2qxvdl" path="res://scenes/customization_menu.tscn" id="5_ke02y"]
[ext_resource type="Texture2D" uid="uid://cod7sn5unigje" path="res://sprites/border.png" id="5_xsw8y"]
[ext_resource type="PackedScene" path="res://scenes/hazards/rock_long.tscn" id="6_fsva3"]
[ext_resource type="PackedScene" path="res://scenes/hazards/rock_big.tscn" id="7_1j5n2"]
[ext_resource type="PackedScene" path="res://scenes/hazards/rock_small.tscn" id="8_eo5qm"]
[ext_resource type="AudioStream" uid="uid://cfrtmfemqwhx" path="res://audio/Through_Navy's_Heart_1.mp3" id="10_lnuum"]
[ext_resource type="Script" path="res://scenes/Music.gd" id="11_up7a1"]
[ext_resource type="AudioStream" uid="uid://rgwd6sjdlaxw" path="res://audio/Through_Navy's_Heart_2.mp3" id="12_dxtda"]

[node name="Main" type="Node"]
script = ExtResource("1_dq6dd")

[node name="Ship1" parent="." instance=ExtResource("1_ra0tt")]
unique_name_in_owner = true
position = Vector2(184, 95)
player = 1
texture_health_high = ExtResource("2_1fgds")
texture_health_medium = ExtResource("2_1fgds")
texture_health_low = ExtResource("2_1fgds")

[node name="Ship2" parent="." instance=ExtResource("1_ra0tt")]
unique_name_in_owner = true
position = Vector2(972, 506)
rotation = 3.14159
player = 2
metadata/_edit_group_ = true

[node name="Camera2D" type="Camera2D" parent="." node_paths=PackedStringArray("ship1", "ship2")]
script = ExtResource("4_6ifil")
ship1 = NodePath("../Ship1")
ship2 = NodePath("../Ship2")

[node name="Border" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Border"]
position = Vector2(589, 325)
polygon = PackedVector2Array(0, -1500, 574.03, -1385.82, 1060.66, -1060.66, 1385.82, -574.03, 1500, 0, 1385.82, 574.03, 1060.66, 1060.66, 574.03, 1385.82, 0, 1500, -574.03, 1385.82, -1060.66, 1060.66, -1385.82, 574.03, -1500, 0, -1385.82, -574.03, -1060.66, -1060.66, -574.03, -1385.82, 0, -1500, 0, -2000, -2000, -2000, -2000, 2000, 2000, 2000, 2000, -2000, 0, -2000)
one_way_collision_margin = 0.0

[node name="Sprite2D" type="Sprite2D" parent="Border"]
position = Vector2(585, 257)
scale = Vector2(3.47823, 3.47823)
texture = ExtResource("5_xsw8y")

[node name="RockLong" parent="." instance=ExtResource("6_fsva3")]

[node name="RockBig" parent="." instance=ExtResource("7_1j5n2")]

[node name="RockSmall" parent="." instance=ExtResource("8_eo5qm")]

[node name="Menus" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CustomizationMenu" parent="Menus" node_paths=PackedStringArray("ship1", "ship2") instance=ExtResource("5_ke02y")]
layout_mode = 2
ship1 = NodePath("../../Ship1")
ship2 = NodePath("../../Ship2")

[node name="MusicPhase1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_lnuum")
autoplay = true
panning_strength = 0.0
script = ExtResource("11_up7a1")
phase = 1

[node name="MusicPhase2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_dxtda")
volume_db = -80.0
autoplay = true
panning_strength = 0.0
script = ExtResource("11_up7a1")
phase = 2

[node name="music_timer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 5.0

[connection signal="cannon_fired" from="Ship1" to="MusicPhase1" method="_on_ship_cannon_fired"]
[connection signal="cannon_fired" from="Ship1" to="MusicPhase2" method="_on_ship_cannon_fired"]
[connection signal="cannon_fired" from="Ship2" to="MusicPhase1" method="_on_ship_cannon_fired"]
[connection signal="cannon_fired" from="Ship2" to="MusicPhase2" method="_on_ship_cannon_fired"]
[connection signal="players_ready" from="Menus/CustomizationMenu" to="." method="_on_customization_menu_players_ready"]
[connection signal="players_ready" from="Menus/CustomizationMenu" to="MusicPhase1" method="_on_customization_menu_players_ready"]
[connection signal="players_ready" from="Menus/CustomizationMenu" to="MusicPhase2" method="_on_customization_menu_players_ready"]
[connection signal="finished" from="MusicPhase1" to="MusicPhase1" method="_on_finished"]
[connection signal="finished" from="MusicPhase2" to="." method="_on_finished"]
[connection signal="timeout" from="music_timer" to="MusicPhase1" method="_on_music_timer_timeout"]
